uefi-macros/tests/ui/fail/entry_bad_abi.stderr
error: Entry function must have no ABI modifier
 --> tests/ui/fail/entry_bad_abi.rs:9:1
  |
9 | extern "C" fn main(_handle: Handle, _st: SystemTable<Boot>) -> Status {
  | ^^^^^^
